apply plugin: 'java'
apply plugin: 'eclipse'

version = '1.0.0'
sourceCompatibility = "1.9"

repositories {
	mavenCentral()
}

dependencies {
    testImplementation "org.junit.jupiter:junit-jupiter:5.7.2"
    testImplementation "org.assertj:assertj-core:3.19.0"
}

test {
	useJUnitPlatform()
}
targetCompatibility = JavaVersion.VERSION_1_9
